# ai-z

./: .gitignore  CMakeLists.txt  LICENSE  README.md  plan.md  vcpkg.json  windows.md
.github/: copilot-instructions.md
.github/workflows/: ci-linux.yml  ci-windows.yml  ci.yml  deploy-apt-pages.yml  launchpad-ppa.yml  publish-apt-pages.yml  python-wheels.yml  release.yml
debian/: changelog  control  copyright  rules
docs/: ai-z.1
include/aiz/: aiz.h  app.h  i18n.h  version.h.in
include/aiz/bench/: bench.h  factory.h  report.h
include/aiz/config/: config.h
include/aiz/dyn/: cuda.h  directml.h  onnxruntime.h  opencl.h  vulkan.h
include/aiz/hw/: hardware_info.h
include/aiz/metrics/: amd_adl.h  amd_adlx.h  amd_rocm_smi.h  collectors.h  cpu_random.h  cpu_usage.h  disk_bandwidth.h  gpu_memory_util.h  gpu_sampler.h  gpu_usage.h  intel_igcl.h  linux_gpu_sysfs.h  network_bandwidth.h  npu_info.h  nvidia_nvml.h  pcie_bandwidth.h  process_list.h  ram_usage.h  timeline.h  windows_d3dkmt.h
include/aiz/platform/: config_paths.h  dynlib.h  platform.h  process.h
include/aiz/platform/metrics/: cpu.h  disk.h  memory.h  network.h
include/aiz/snapshot/: json_writer.h  snapshot.h
include/aiz/tui/: ftxui_ui.h  ncurses_ui.h  notcurses_ui.h  telemetry.h  tui_core.h  ui.h  win32_terminal_ui.h
packaging/apt/: README.md  make_repo.sh
packaging/launchpad/: README.md
packaging/linux/: ai-z.desktop
packaging/windows/: ai-z.iss  ai-z.rc
python/: CMakeLists.txt  README.md  pyproject.toml
python/aiz/: __init__.py
python/examples/: demo_tui.py
python/src/: bindings.cpp
python/tests/: conftest.py  test_aiz.py
src/: main.cpp
src/aiz/: app.cpp  i18n.cpp
src/aiz/bench/: bench_stub.cpp  directml_bench.cpp  gpu_compute_cuda.cpp  gpu_compute_cuda.cu  gpu_compute_opencl.cpp  gpu_compute_vulkan.cpp  npu_bench.cpp  onnxruntime_bench.cpp  onnxruntime_matmul_model.inc  pcie_bandwidth_cuda.cpp  pcie_bandwidth_cuda_pergpu.cpp  pcie_bandwidth_opencl.cpp  pcie_bandwidth_vulkan.cpp  report.cpp  vulkan_fp32_bench_spv.h
src/aiz/config/: config.cpp
src/aiz/dyn/: cuda.cpp  directml.cpp  onnxruntime.cpp  opencl.cpp  vulkan.cpp
src/aiz/hw/: hardware_info.cpp  hardware_info_windows.cpp
src/aiz/metrics/: amd_adl.cpp  amd_adlx.cpp  amd_rocm_smi.cpp  amd_rocm_smi_stub.cpp  cpu_random.cpp  cpu_usage.cpp  disk_bandwidth.cpp  gpu_memory_util.cpp  gpu_sampler.cpp  gpu_stub.cpp  intel_igcl.cpp  linux_gpu_sysfs.cpp  network_bandwidth.cpp  npu_amd_linux.cpp  npu_amd_windows.cpp  npu_info.cpp  npu_intel_linux.cpp  npu_intel_windows.cpp  nvidia_nvml.cpp  pcie_stub.cpp  process_list.cpp  ram_usage.cpp  timeline.cpp  windows_d3dkmt.cpp
src/aiz/platform/linux/: config_paths_linux.cpp  dynlib_linux.cpp  process_linux.cpp
src/aiz/platform/linux/metrics/: cpu_linux.cpp  disk_linux.cpp  memory_linux.cpp  network_linux.cpp
src/aiz/platform/windows/: config_paths_windows.cpp  dynlib_windows.cpp  process_windows.cpp
src/aiz/platform/windows/metrics/: cpu_windows.cpp  disk_windows.cpp  memory_windows.cpp  network_windows.cpp
src/aiz/snapshot/: json_writer.cpp  snapshot.cpp
src/aiz/tui/: ftxui_ui.cpp  ncurses_bench.cpp  ncurses_bench.h  ncurses_bench_rows.cpp  ncurses_bench_rows.h  ncurses_bootprobe.cpp  ncurses_bootprobe.h  ncurses_input.cpp  ncurses_input.h  ncurses_probe.cpp  ncurses_probe.h  ncurses_render.cpp  ncurses_render.h  ncurses_sampler.cpp  ncurses_sampler.h  ncurses_telemetry.cpp  ncurses_telemetry.h  ncurses_ui.cpp  notcurses_input.cpp  notcurses_input.h  notcurses_render.cpp  notcurses_render.h  notcurses_ui.cpp  platform_ui_ncurses.cpp  platform_ui_notcurses.cpp  tui_core.cpp  win32_terminal_ui.cpp  win_curses_seh.c  windows_console_ui.cpp
tests/: CMakeLists.txt  minitest.h  test_config.cpp  test_framework.h  test_main.cpp  test_snapshot.cpp  test_timeline.cpp  test_version.cpp
tools/: vulkan_fp32_bench.comp
vcpkg-overlay-ports/ftxui/: 0001-windows-synchronized-output-decset-2026.patch  portfile.cmake
